# SEGUNDO-TALLER-ESTRUCTURA-2026

./: CMakeLists.txt  README.md  build.bat  status.cfg
Classes/: Cancion.cpp  Cancion.hpp  Reproductor.hpp
Core/: Reproductor.cpp  main.cpp
data_structures/: AVLArtista.h  LinkedList.h  MaxHeap.h  Nodo.h  Trie.h  music_source.txt
